# Software_dev

./: CMakeLists.txt
code/: dev.c  logo.c  main.c
header/: dev.h  logo.h
